# simple-dialog

./: simple-dialog.cabal
Graphics/UI/Dialog/: Simple.hs
